--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,4 @@
 ---
 ---
 
-@import "";
-#project-name {align: left;}
-body {background-color: red;}
+@import "https://thesciencemuseum.github.io/heritageconnector/assets/css/hc_style.css";
