--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -2,9 +2,7 @@
 
 // Define defaults for each variable.
 
-$base-font-family: SMGSans;
-        src: url(https://thesciencemuseum.github.io/collection-chrome-extension/SMGSans-Regular.woff) format("woff");
-        font-style: normal;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Segoe UI Symbol", "Segoe UI Emoji", "Apple Color Emoji", Roboto, Helvetica, Arial, sans-serif !default;
 $code-font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
