--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -6,6 +6,7 @@ html {
         font-family: SMGSans;
         src: url(https://thesciencemuseum.github.io/collection-chrome-extension/SMGSans-Regular.woff) format("woff");
         font-style: normal;
+}
 
 /**
  * Reset some basic elements
