--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,4 +1,3 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
-.site-header {background-color: black;}
-.wrapper {background-color: black;}
+header.site-header {background-color: black;}
