--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,20 @@
       {%- endif %}
       </div>
       <div class="footer-col">
+        <h2>Heritage Connector Links</h2>
+
+                <ul>
+                    <li>
+                        <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
+                    </li>
+                    <li>
+                        <a href="https://www.zotero.org/groups/2439363/heritage_connector">Zotero Library</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/TheScienceMuseum/heritage-connector/">Github repository</a>
+                    </li>
+                </ul>
+        
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
