--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -5,8 +5,7 @@ html {
     @font-face {
         font-family: SMGSans;
         src: url(https://thesciencemuseum.github.io/collection-chrome-extension/SMGSans-Regular.woff) format("woff");
-        font-style: normal;
-}
+        font-style: normal;}
 
 /**
  * Reset some basic elements
