More footer rejigging

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
           {%- endif %}
         </ul>
       {%- endif %}
-        <p>Links:</p>
+        <h2>Project Links:</h2>
         <ul>
                     <li>
                         <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
@@ -34,21 +34,11 @@
                         <a href="https://github.com/TheScienceMuseum/heritage-connector/">Github repository</a>
                     </li>
                 </ul> 
+        
+                 <p>{{ site.description | escape }}</p>
       </div>
       <div class="footer-col">
-          <p>{{ site.description | escape }}</p>
-        <p>Links:</p>
-        <ul>
-                    <li>
-                        <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
-                    </li>
-                    <li>
-                        <a href="https://www.zotero.org/groups/2439363/heritage_connector">Zotero Library</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/TheScienceMuseum/heritage-connector/">Github repository</a>
-                    </li>
-                </ul> 
+ 
       <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
       </div>
     </div>
