--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
                  <p>{{ site.description | escape }}</p>
       </div>
       <div class="footer-col">
- 
+      <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group]</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
       <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
       </div>
     </div>
