--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,4 +1,5 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 header.site-header {background-color: black;}
-a.header.site-title {color: white; text-transform: uppercase;}
+.site-title {color: white; text-transform: uppercase;}
+
