--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,4 +2,4 @@
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 header.site-header {background-color: black;}
 .site-title {color: white; text-transform: uppercase;}
-
+.site-nav {display: none;}
