--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,5 +1,5 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 header.site-header {background-color: black;}
-.site-title {color: white; text-transform: uppercase;}
+.site-title a:visited a:hover {color: white; text-transform: uppercase;}
 .site-nav {display: none;}
