Rejigging footer again

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,8 +22,9 @@
           {%- endif %}
         </ul>
       {%- endif %}
-        <h2>Project Links:</h2>
-        <ul>
+        <h2>About</h2>
+        <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group]</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
+      <ul>
                     <li>
                         <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
                     </li>
@@ -35,11 +36,12 @@
                     </li>
                 </ul> 
         
+
+        
                  <p>{{ site.description | escape }}</p>
       </div>
       <div class="footer-col">
-      <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group]</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
-      <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
+       <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p> 
       </div>
     </div>
 
