Links black and underlined!

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -3,3 +3,4 @@
 header.site-header {background-color: black;}
 .site-title a:visited a:hover {color: white; text-transform: uppercase;}
 .site-nav {display: none;}
+a {color: black; text-decoration: underline;}
