--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -4,3 +4,5 @@ header.site-header {background-color: black;}
 .site-title a:visited a:hover {color: white; text-transform: uppercase;}
 .site-nav {display: none;}
 a {color: black; text-decoration: underline;}
+.footer-col-wrapper {color: black; font-size: 1em;}
+.post-meta {color: black;}
