--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,8 +1,8 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 header.site-header {background-color: black;}
-.site-title a:visited a:hover {color: white; text-transform: uppercase;}
+.site-title, .site-title:visited {color: white; text-transform: uppercase;}
 .site-nav {display: none;}
-a {color: black; text-decoration: underline;}
+a, a:visited, a:hover {color: black; text-decoration: underline;}
 .footer-col-wrapper {color: black; font-size: 1em;}
 .post-meta {color: black;}
