--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
-            <svg class="svg-icon orange">
-              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-            </svg><span>RSS</span>
-          </a>
-        </p>
+        
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
@@ -23,6 +17,7 @@
         </ul>
       {%- endif %}
         <h2>About</h2>
+        <p>{{ site.description | escape }}</p> 
         <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group]</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
       <ul>
                     <li>
@@ -38,11 +33,16 @@
         
 
         
-                 <p>{{ site.description | escape }}</p>
+                 
       </div>
       <div class="footer-col">
-       <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p> 
-      </div>
+        <p class="feed-subscribe">
+          <a href="{{ 'feed.xml' | relative_url }}">
+            <svg class="svg-icon orange">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+            </svg><span>RSS</span>
+          </a>
+        </p>      </div>
     </div>
 
     <div class="social-links">
