--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
       {%- endif %}
         <h2>About</h2>
         <p>{{ site.description | escape }}</p> 
-        <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group]</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
+        <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
       <ul>
                     <li>
                         <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
