--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,18 +31,20 @@
                     </li>
                 </ul> 
         
-
+<p class="feed-subscribe">
+          <a href="{{ 'feed.xml' | relative_url }}">
+            <svg class="svg-icon orange">
+              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+            </svg><span>Blog RSS feed</span>
+          </a>
+        </p>      
         
                  
       </div>
       <div class="footer-col">
-        <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
-            <svg class="svg-icon orange">
-              <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
-            </svg><span>RSS</span>
-          </a>
-        </p>      </div>
+              <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
+
+        </div>
     </div>
 
     <div class="social-links">
