--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,7 @@
           {%- endif %}
         </ul>
       {%- endif %}
-        <h2>About</h2>
-        <p>{{ site.description | escape }}</p> 
+        <p style="font-weight: bold;">Heritage Connector: {{ site.description | escape }}</p> 
         <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
       <ul>
                     <li>
