--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,7 @@
       {%- endif %}
 
 -->
-        <p style="font-weight: bold;">Heritage Connector: {{ site.description | escape }}</p> 
-        <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
+        <p style="font-weight: bold; text-transform: uppercase;">Heritage Connector: {{ site.description | escape }}</p> 
       <ul>
                     <li>
                         <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
@@ -44,7 +43,8 @@
                  
       </div>
       <div class="footer-col">
-              <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
+        <p>Heritage Connector is a partnership between <a href="https://www.sciencemuseumgroup.org.uk/">Science Museum Group</a>, <a href="https://www.sas.ac.uk">School of Advanced Study, University of London</a> and the <a href="https://www.vam.ac.uk">V&amp;A</a>.</p>
+        <p>Heritage Connector is funded by the Arts and Humanities Research Council's <a href="https://ahrc.ukri.org/research/fundedthemesandprogrammes/tanc-opening-uk-heritage-to-the-world/">Towards a National Collection: Opening UK Heritage to the World</a> fund.</p>
 
         </div>
     </div>
