H2 and H3 margins and font sizes

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -6,5 +6,7 @@ header.site-header {background-color: black; background-image: url("/heritagecon
 a, a:visited, a:hover {color: black; text-decoration: underline;}
 .footer-col-wrapper {color: black; font-size: 1em;}
 .post-meta {color: black;}
-.post-title {font-size: 2.3em;}
+.post-title {font-size: 2em;}
+.post-content h2 {font-size: 1.7rem}
+.post-content h3 {font-size: 1.4rem; margin-bottom: 5px; margin-top: 0px;}
 body {font-size: 18px;}
