--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,7 @@
           </a>
         </p>      
         
+        <p>All content <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution (CC BY)</a> unless otherwise specified.</p>
                  
       </div>
       <div class="footer-col">
