--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -7,6 +7,6 @@ a, a:visited, a:hover {color: black; text-decoration: underline;}
 .footer-col-wrapper {color: black; font-size: 1em;}
 .post-meta {color: black;}
 .post-title {font-size: 2em;}
-.post-content h2 {font-size: 1.5rem; margin-top: 5px;}
-.post-content h3 {font-size: 1.2rem; margin-bottom: 5px; margin-top: 5px;}
+.post-content h2 {font-size: 1.5rem; margin-top: 5px; font-weight: bold;}
+.post-content h3 {font-size: 1.2rem; margin-bottom: 5px; margin-top: 5px; font-weight: bold;}
 body {font-size: 18px;}
