Remove header borders top and bottom

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,6 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
-header.site-header {background-color: black; background-image: url("/heritageconnector/assets/SWITCH-1536x600.jpg"); background-repeat: no-repeat; background-size: cover; background-position: centre; }
+header.site-header {background-color: black; background-image: url("/heritageconnector/assets/SWITCH-1536x600.jpg"); background-repeat: no-repeat; background-size: cover; background-position: centre; border-top: none; border-bottom: none;}
 .site-title, .site-title:visited {color: white; text-transform: uppercase; text-decoration: none; font-size: 2.3em; padding-top: 1em; padding-bottom: 1em;}
 .site-nav {display: none;}
 a, a:visited, a:hover {color: black; text-decoration: underline;}
