--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                         <a href="https://www.sciencemuseumgroup.org.uk/project/heritage-connector/">Project information</a>
                     </li>
                     <li>
-                        <a href="https://www.zotero.org/groups/2439363/heritage_connector">Zotero Library</a>
+                        <a href="https://www.zotero.org/groups/2439363/heritage_connector">Zotero library</a>
                     </li>
                     <li>
                         <a href="https://github.com/TheScienceMuseum/heritage-connector/">Github repository</a>
